@@ -1,3 +1,3 @@
 {
-	"latest_version" : "2.0.0"
+	"latest_version" : "2.0.2"
 }
