@@ -1,0 +1,7 @@
+package zollerngalaxy.core.enums;
+
+public enum EnumBlockTier {
+	
+	ONE, TWO, THREE, FOUR, FIVE, SIX, SEVEN, EIGHT, NINE, TEN;
+	
+}
