@@ -1,7 +1,0 @@
-package zollerngalaxy.core.enums;
-
-public enum EnumBlockVariant {
-	
-	OVERWORLD, NETHER, END, UPSIDE_DOWN, PROMISED_LAND;
-	
-}
